--- a/home/templates/home/login.html
+++ b/home/templates/home/login.html
@@ -1,12 +1,18 @@
-{% extends 'appbase.html' %}
-{% block content %}
-<div class="container-fluid">
-	<form method="POST">{% csrf_token %}
-		{{ form.as_p }} 
-		<input class ="btn btn-primary" type="submit" name="sumbit">
-	</form>
-</div>
-{% endblock %}
+{%extends 'base.html'%}
+{%load static%}
 
-{% block scripts %}
-{% endblock %}
+{%block title %} Login {%endblock title %}
+
+{% block content %}
+
+<div class="container-fluid">
+
+  <form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class ="btn btn-primary" type="submit" name="submit">
+  </form>
+
+</div>
+
+{% endblock content %}
