--- a/templates/base.html
+++ b/templates/base.html
@@ -2,53 +2,49 @@
 
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<head>
+    <!-- Custom CSS -->
+    <link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
 
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+      rel="stylesheet" 
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+      crossorigin="anonymous"
+    >
 
-		<!-- Custom CSS -->
-		<link rel='stylesheet' type='text/css' href={% static 'css/style.css' %}>
+    <!-- Bootstrap 5 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    >
+    </script>
 
-		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Altair -->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
-		<title> {% block title %}ML Playground{% endblock %}</title>
-  
-		<!-- Bootstrap 5 -->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-					 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-					 crossorigin="anonymous"
-		>
-		</script>
+    <!-- Extra per-template head entries -->
+    <title> {% block title %} {% endblock title %} </title>
+  </head>
 
-		<!-- Altair -->
-		<script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-		<script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
-		<script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+  <body>
 
-		<!-- Extra per-template head entries -->
-		{% block extra_head %}
+    <!-- Navigation -->
+    {% include "navbar.html" %}
 
-		{% endblock %}
+    <!-- Page Content -->
+    <div class='container px-5'>
+      {% block content %}
+        Default Bootstrap Container.
+      {% endblock %}
+    </div>
 
-	</head>
-
-	<body>
-
-		<!-- Navigation -->
-		{% include "menu.html" %}
-
-		<!-- Page Content -->
-		<div class='container base'>
-			{% block content %}
-			content: Oops. You shouldn't be seeing this.
-			{% endblock %}
-		</div>
-
-
-	</body>
+  </body>
 
 </html>
