Adding container to front page image

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,6 +5,6 @@
 
 {% block content %}
 
-    <img class="mr-3" src="{% static 'home/img/AnomalyDetection.jpg' %}" alt="Anomaly Detection">
+    <img class="img-fluid img-front-page" src="{% static 'home/img/AnomalyDetection.jpg' %}" alt="Anomaly Detection">
 
 {% endblock content %}
