--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -14,3 +14,11 @@ h5 {
 p {
     color: white;
 }
+
+.img-front-page {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right:20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
