Finishing landing page, starting url linking from navbar

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,6 +5,8 @@
 
 {% block content %}
 
-    <img class="img-fluid img-front-page" src="{% static 'home/img/AnomalyDetection.jpg' %}" alt="Anomaly Detection">
+  <div class="container-img-front-page">
+    <img class="img-fluid img-front-page" src="{% static 'home/img/AnomalyDetectionv1.jpg' %}" alt="Anomaly Detection">
+  </div>
 
 {% endblock content %}
