--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -15,10 +15,12 @@ p {
     color: white;
 }
 
+.container-img-front-page {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .img-front-page {
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-right:20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  horizontal-align: center;
 }
