--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -14,7 +14,7 @@
     <ul class="navbar-nav">
 
       <li class="nav-item {%if request.path == path_to_home%} active {% endif %}">
-        <a class="nav-link" href="{{path_to_home}}">Home</a>
+        <a class="nav-link" href="{% url 'home:home' %}">Home</a>
       </li>
 
       {% if request.user.is_authenticated%}
@@ -28,11 +28,27 @@
 
       {% else %}
       <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
-        <a class="nav-link" href="#">Whatever</a>
+        <a class="nav-link" href="#">Granularity</a>
+      </li>
+
+      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
+        <a class="nav-link" href="#">Histograms</a>
+      </li>
+
+      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
+        <a class="nav-link" href="#">Certification</a>
+      </li>
+
+      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
+        <a class="nav-link" href="#">Challenges</a>
+      </li>
+
+      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
+        <a class="nav-link" href="#">APIs</a>
       </li>
 
       <li class="nav-item {%if request.path == path_to_login%} active {% endif %}">
-        <a class="nav-link" href="{{path_to_login}}">Login</a>
+        <a class="nav-link" href="{% url 'home:login' %}">Login</a>
       </li>
 
       {% endif %}
