--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -27,16 +27,40 @@
       </li>
 
       {% else %}
-      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
-        <a class="nav-link" href="#">Granularity</a>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Granularity
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'data_taking_objects:main-runs-view' %}">Runs</a>
+          <a class="dropdown-item" href="#">Lumisections</a>
+        </div>
       </li>
 
-      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
-        <a class="nav-link" href="#">Histograms</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Histograms
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Histograms Summary</a>
+          <a class="dropdown-item" href="#">1D Histograms</a>
+          <a class="dropdown-item" href="#">2D Histograms</a>
+        </div>
       </li>
 
       <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
         <a class="nav-link" href="#">Certification</a>
+      </li>
+
+      <li class="nav-item dropdown {%if request.path == path_to_whatever%} active {% endif %}">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Challenges
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Task</a>
+          <a class="dropdown-item" href="#">Prediction</a>
+        </div>
       </li>
 
       <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
