--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,7 +1,3 @@
-{% url '/' as path_to_home %}
-{% url 'login/' as path_to_login %}
-{% url 'logout/' as path_to_logout %}
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
 
   <a class="navbar-brand" href="">DQM Playground</a>
@@ -54,15 +50,15 @@
         </div>
       </li>
 
-      <li class="nav-item {%if request.path == path_to_logout%} active {% endif %}">
-        <a class="nav-link" href="{{path_to_logout}}">Logout</a>
-      </li>
-
-      {% else %}
-
       <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
         <a class="nav-link" href="#">APIs</a>
       </li>
+
+      <li class="nav-item {%if request.path == path_to_logout%} active {% endif %}">
+        <a class="nav-link" href="{% url 'home:logout' %}">Logout</a>
+      </li>
+
+      {% else %}
 
       <li class="nav-item {%if request.path == path_to_login%} active {% endif %}">
         <a class="nav-link" href="{% url 'home:login' %}">Login</a>
