--- a/data_taking_objects/templates/data_taking_objects/lumisection.html
+++ b/data_taking_objects/templates/data_taking_objects/lumisection.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Runs {% endblock title %}
+{% block title %} Run {{run_number}} - Lumisection {{lumi_number}} {% endblock title %}
 
 {% block content %}
 
@@ -22,24 +22,18 @@
       <thead class="thead-dark">
         <tr>
           <th scope="col">Run number</th>
-          <th scope="col">Number of lumisections</th>
+          <th scope="col">Lumisection number</th>
           <th scope="col">Integrated luminosity</th>
           <th scope="col">Initial ZeroBias rate</th>
         </tr>
       </thead>
       <tbody>
-        {% for run in runs.itertuples %}
           <tr>
-            <th scope="row"> 
-              <a href="{% url 'data_taking_objects:run-view' run_number=run.run_number %}">
-                {{ run.run_number }}
-              </a>
-            </th>
-            <td>XXX</td>
+            <th scope="row"> {{ run_number }} </th>
+            <th> {{lumi_number}} </th>
             <td>XXX</td>
             <td>XXX</td>
           </tr>
-        {% endfor %}
       </tbody>
     </table>
 
