--- a/data_taking_objects/templates/data_taking_objects/lumisections.html
+++ b/data_taking_objects/templates/data_taking_objects/lumisections.html
@@ -20,6 +20,36 @@
   </div>
 
   <div class='container-fluid'>
-    {{ runs | safe }}
+
+    <table class="table">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">Run number</th>
+          <th scope="col">Lumisection number</th>
+          <th scope="col">Integrated luminosity</th>
+          <th scope="col">Initial ZeroBias rate</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for lumi in lumisections.itertuples %}
+          <tr>
+            <th scope="row">
+              <a href="{% url 'data_taking_objects:run-view' run_number=lumi.run_number %}">
+                {{ lumi.run_number }}
+              </a>
+            </th>
+            <th>
+              <a href="{% url 'data_taking_objects:lumisection-view' run_number=lumi.run_number lumi_number=lumi.ls_number%}">
+                {{ lumi.ls_number }}
+              </a>
+            </th>
+            <td>XXX</td>
+            <td>XXX</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
   </div>
+
 {% endblock content %}
