--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -52,7 +52,7 @@
       </li>
 
       <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
-        <a class="nav-link" href="#">APIs</a>
+        <a class="nav-link" href="{% url 'api:api-root' %}">APIs</a>
       </li>
 
       <li class="nav-item {%if request.path == path_to_logout%} active {% endif %}">
