--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,12 @@
 
     <!-- Extra per-template head entries -->
     <title> {% block title %} {% endblock title %} </title>
+
+    {% block style %}
+    {% endblock style %}
+    
+    {% block head %}
+    {% endblock head %}
   </head>
 
   <body>
