--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -39,8 +39,17 @@
         </div>
       </li>
 
-      <li class="nav-item {%if request.path == path_to_whatever%} active {% endif %}">
-        <a class="nav-link" href="#">Certification</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Certification
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Overview</a>
+          <hr class="dropdown-divider">
+          <a class="dropdown-item" href="#">Run Certification</a>
+          <hr class="dropdown-divider">
+          <a class="dropdown-item" href="#">Lumisection Certification</a>
+        </div>
       </li>
 
       <li class="nav-item dropdown {%if request.path == path_to_whatever%} active {% endif %}">
