Finishing linking to histograms from navbar

--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -34,8 +34,8 @@
           <hr class="dropdown-divider">
           <a class="dropdown-item" href="{% url 'histograms:run-histograms-view' %}">Run Histograms</a>
           <hr class="dropdown-divider">
-          <a class="dropdown-item" href="#">Lumisection 1D Histograms</a>
-          <a class="dropdown-item" href="#">Lumisection 2D Histograms</a>
+          <a class="dropdown-item" href="{% url 'histograms:lumisections_1D_list' %}">Lumisection 1D Histograms</a>
+          <a class="dropdown-item" href="{% url 'histograms:lumisections_2D_list' %}">Lumisection 2D Histograms</a>
         </div>
       </li>
 
