Restored base template blocks

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block head %}
+{% block extra_head %}
 <script src="{% static 'js/vue.global.js' %}"></script>
 <script src="{% static 'js/axios.min.js' %}"></script>
 <script src="{% static 'js/utils.js' %}"></script>
