--- a/templates/base.html
+++ b/templates/base.html
@@ -30,13 +30,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
 
     <!-- Extra per-template head entries -->
-    <title> {% block title %} {% endblock title %} </title>
+    <title> {% block title %} {% endblock %} </title>
 
     {% block style %}
-    {% endblock style %}
+    {% endblock %}
     
-    {% block head %}
-    {% endblock head %}
+    {% block extra_head %}
+    {% endblock %}
   </head>
 
   <body>
@@ -45,14 +45,19 @@
     {% include "navbar_top.html" %}
 
     <!-- Page Content -->
-    <div class='container container-main-page'>
-      {% block content %}
-        Default Bootstrap Container.
-      {% endblock %}
-    </div>
+      <div class='container container-main-page'>
+		  {% block content %}
+          Default Bootstrap Container.
+		  {% endblock %}
+      </div>
 
-    {% include "navbar_bottom.html" %}
+      {% include "navbar_bottom.html" %}
+
+	  
 
   </body>
+  
+  {% block scripts %}
+  {% endblock %}  
 
 </html>
