Adding management and preliminary frontend for run certification

--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -46,7 +46,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Overview</a>
           <hr class="dropdown-divider">
-          <a class="dropdown-item" href="#">Run Certification</a>
+          <a class="dropdown-item" href="{% url 'data_taking_certification:run-certification-view' %}">Run Certification</a>
           <hr class="dropdown-divider">
           <a class="dropdown-item" href="#">Lumisection Certification</a>
         </div>
