Adding float64 to float conversion for run certification reader

--- a/data_taking_certification/templates/data_taking_certification/run_certification.html
+++ b/data_taking_certification/templates/data_taking_certification/run_certification.html
@@ -28,6 +28,7 @@
           <th scope="col">Frac. Pixel GOOD</th>
           <th scope="col">Frac. Strip GOOD</th>
           <th scope="col">Frac. Track GOOD</th>
+          <th scope="col">Frac. Ecal GOOD</th>
         </tr>
       </thead>
       <tbody>
@@ -46,6 +47,9 @@
             </td>
             <td>
               {{ run.rr_frac_tracking_good }}
+            </td>
+            <td>
+              {{ run.rr_frac_ecal_good }}
             </td>
           </tr>
         {% endfor %}
