--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -48,7 +48,7 @@
           <hr class="dropdown-divider">
           <a class="dropdown-item" href="{% url 'data_taking_certification:run-certification-view' %}">Run Certification</a>
           <hr class="dropdown-divider">
-          <a class="dropdown-item" href="#">Lumisection Certification</a>
+          <a class="dropdown-item" href="{% url 'data_taking_certification:lumisection-certification-view' %}">Lumisection Certification</a>
         </div>
       </li>
 
