--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -26,7 +26,7 @@ Histogram File Manager
 
 	<!-- Filter form, rendered by django -->
 	<p>
-		<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#filters-collapse" aria-expanded="false" aria-controls="filters-collapse">
+		<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#filters-collapse" aria-expanded="false" aria-controls="filters-collapse">
 			Filters
 		</button>
 	</p>
