--- a/listdatasets/templates/listdatasets/listdatasets.html
+++ b/listdatasets/templates/listdatasets/listdatasets.html
@@ -16,9 +16,9 @@ List datasets
         <h1 class="my-3" align="center">Datasets</h1>
         <h15 class="my-3" align="center">Tabs which list the datasets are organised by granularity of the data - Lumisection, Run, Fill</h5>
         <ul class="nav nav-tabs mb-2">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#lumi">Lumisection</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#run">Run</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#fill">Fill</a></li>
+            <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#lumi">Lumisection</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#run">Run</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#fill">Fill</a></li>
         </ul>
         <div class="tab-content">
 
