--- a/data_taking_objects/templates/data_taking_objects/run.html
+++ b/data_taking_objects/templates/data_taking_objects/run.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Run {{run_number}} {% endblock title %}
+{% block title %} Run {{ run.run_number }} {% endblock title %}
 
 {% block content %}
 
@@ -29,7 +29,7 @@
       </thead>
       <tbody>
           <tr>
-            <th scope="row">{{ run_number }}</th>
+            <th scope="row">{{ run.run_number }}</th>
             <td>XXX</td>
             <td>XXX</td>
             <td>XXX</td>
