Refactoring runs and lumisections pages for more meaningful content

--- a/data_taking_objects/templates/data_taking_objects/lumisections.html
+++ b/data_taking_objects/templates/data_taking_objects/lumisections.html
@@ -26,8 +26,9 @@
         <tr>
           <th scope="col">Run number</th>
           <th scope="col">Lumisection number</th>
-          <th scope="col">Integrated luminosity</th>
-          <th scope="col">Initial ZeroBias rate</th>
+          <th scope="col">OMS info</th>
+          <th scope="col">Histograms</th>
+          <th scope="col">RR certification info</th>
         </tr>
       </thead>
       <tbody>
@@ -43,8 +44,15 @@
                 {{ lumisection.ls_number }}
               </a>
             </th>
-            <td>XXX</td>
-            <td>XXX</td>
+            <td>
+              <span class="badge bg-warning">Not available</span>
+            </td>
+            <td>
+              <span class="badge bg-success"> {{ lumisection.lumisection_histogram|length }} histograms available</span>
+            </td>
+            <td>
+              <span class="badge bg-success">Available</span>
+            </td>
           </tr>
         {% endfor %}
       </tbody>
