Solving namespace mismatch

--- a/data_taking_objects/templates/data_taking_objects/runs.html
+++ b/data_taking_objects/templates/data_taking_objects/runs.html
@@ -43,7 +43,7 @@
               <span class="badge bg-success">Available</span>
             </td>
             <td>
-              <span class="badge bg-success"> {{ run.run_histograms|length }} histograms available</span>
+              <span class="badge bg-success"> {{ run.histograms|length }} histograms available</span>
             </td>
             <td>
               <span class="badge bg-success">Available</span>
