Adding ModelForm for Task creation and corresponding view/template

--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -58,7 +58,7 @@
           Challenges
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Task</a>
+          <a class="dropdown-item" href="{% url 'challenge:create-task-view' %}">Task</a>
           <a class="dropdown-item" href="#">Prediction</a>
           <a class="dropdown-item" href="#">JSON Producer</a>
         </div>
