Added ListView for Tasks

--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -58,9 +58,11 @@
           Challenges
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{% url 'challenge:create-task-view' %}">Task</a>
-          <a class="dropdown-item" href="#">Prediction</a>
-          <a class="dropdown-item" href="#">JSON Producer</a>
+			<a class="dropdown-item" href="{% url 'challenge:create-task-view' %}">Create a Task</a>
+			<a class="dropdown-item" href="{% url 'challenge:task-list' %}">Task List</a>			
+			<a class="dropdown-item" href="#">Prediction</a>
+			<a class="dropdown-item" href="#">JSON Producer</a>
+		  
         </div>
       </li>
 
