--- a/challenge/templates/challenge/task_list.html
+++ b/challenge/templates/challenge/task_list.html
@@ -16,14 +16,15 @@
 				<td><strong>Training runs</strong></td>
 				<td><strong>Testing runs</strong></td>
 				<td><strong>Training lumisections</strong></td>				
-				<td><strong>Testing lumisections</strong></td>								
+				<td><strong>Testing lumisections</strong></td>
+				<!-- <td><strong>Execute task</strong></td> -->
 			</tr>
 		</thead>
 		<tbody>
 			{% for task in object_list %}
 			<tr>
 				<td>
-					{{ task.id }}
+					<a href="{% url 'challenge:task-detail' task.id %}"> {{ task.id }} </a>
 				</td>
 				<td>
 					{{ task.name }}
@@ -39,7 +40,10 @@
 				</td>
 				<td>
 					{{ task.testing_lumisections.count }}
-				</td>														
+				</td>
+				<!-- <td>
+					 <button class="btn btn-primary" id="trigger_pipeline_{{task.id}}">Run</button>
+					 </td>																		 -->
 			</tr>
 			{% endfor %}
 				
