--- a/challenge/templates/challenge/task_detail.html
+++ b/challenge/templates/challenge/task_detail.html
@@ -8,7 +8,7 @@
 
 <div class="container-fluid">
 	<h2> {% if task.name %} {{ task.name }} {% else %} {{ task.id }} {% endif %}</h2>
-	<form method="POST">
+	<form method="" id="form_trigger_pipeline">
 		{% csrf_token %}
 		<div class="row">
 			<button class="btn btn-block btn-primary">Run Pipeline</button>
@@ -16,6 +16,43 @@
 	</form>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+ function getCookie(name) {
+     let cookieValue = null;
+     if (document.cookie && document.cookie !== '') {
+         const cookies = document.cookie.split(';');
+         for (let i = 0; i < cookies.length; i++) {
+             const cookie = cookies[i].trim();
+             // Does this cookie string begin with the name we want?
+             if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                 cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                 break;
+             }
+         }
+     }
+     return cookieValue;
+ }
+
+ window.addEventListener("load", function () {
+	 var form = document.getElementById("form_trigger_pipeline");
+
+	 // Prevent 
+	 form.addEventListener("submit", (e) => {
+		 e.preventDefault();
+		 var req = new XMLHttpRequest();
+		 req.addEventListener("load", function() {
+			 // console.log(this.responseText);
+			 alert(this.responseText);
+		 });
+		 req.open("POST","");
+		 req.setRequestHeader('X-CSRFToken', getCookie('csrftoken'));
+		 req.send();
+	 });
+ });
+</script>
 {% endblock %}
 
 
