--- a/challenge/templates/challenge/task_detail.html
+++ b/challenge/templates/challenge/task_detail.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container-fluid">
-	<h2> {% if task.name %} {{ task.name }} {% else %} {{ task.id }} {% endif %}</h2>
+	<h2> {% if object.name %} {{ object.name }} {% else %} Task {{ object.id }} {% endif %}</h2>
 	<form method="" id="form_trigger_pipeline">
 		{% csrf_token %}
 		<div class="row">
