--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -35,7 +35,7 @@ Histogram File Manager
 			<div class="form-group">
 				{{ filter.form }}
 			</div>
-			<button type="submit" class="btn btn-primary">Apply filters</button>
+			<button type="submit" class="btn btn-primary mt-3">Apply filters</button>
 		</form>
 	</div>
 
