Important front-end updates

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
 
 		<!-- Extra per-template head entries -->
 		<title> {% block title %} {% endblock %} </title>
+		<link rel="icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
 
 		{% block style %}
 		{% endblock %}
