--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,6 +1,10 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
 
-  <a class="navbar-brand" href="">DQM Playground</a>
+	<a class="navbar-brand" href="">
+		<img src="{% static 'img/favicon.png' %}" width="30" height="30" alt="" title="My Little Playground">
+		DQM Playground
+	</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
