--- a/templates/navbar_top.html
+++ b/templates/navbar_top.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
 
-	<a class="navbar-brand" href="">
+	<a class="navbar-brand" href="/">
 		<img src="{% static 'img/favicon.png' %}" width="30" height="30" alt="" title="My Little Playground">
 		DQM Playground
 	</a>
