renamed vars for clarity

--- a/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
+++ b/histogram_file_manager/templates/histogram_file_manager/histogram_file_manager.html
@@ -48,8 +48,8 @@ Histogram File Manager
 		>
 		</file-table>
 		<table-pagination
-			:page_next="page_next"
-						:page_previous="page_previous"
+			:page_next_url="page_next_url"
+						:page_previous_url="page_previous_url"
 						:total_pages="total_pages"
 						@clicked-previous="fetch_previous_result_page"
 						@clicked-next="fetch_next_result_page"
